--- a/src/Styles/SignIn.css
+++ b/src/Styles/SignIn.css
@@ -1,14 +1,25 @@
-.header-container{
-    display: flex;
-    space-between: space-between;
-    align-items: center;
-    border: 1px solid lightgray;
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid lightgray;
+  height: 3rem;
+  margin: 0 auto;
 }
 
-.header-title{
-    display: flex;
-    align-items: center;
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-left: 1rem;
+.header-title {
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-left: 1rem;
+}
+
+.signUp-card {
+  display: flex;
+  flex-direction: column;
+  align: center;
+  align-items: center;
+  justify-content: center;
+  margin: 50 auto;
 }
