--- a/src/Styles/SignIn.css
+++ b/src/Styles/SignIn.css
@@ -7,14 +7,49 @@
     }
   }
   
-  .alert-container {
+.alert-container {
     margin-right: 20vw;
     margin-left: 20vw;
     margin-top: 3vh;
     opacity: 0; /* Default state */
-  }
+}
   
-  .alert-container.fade-in {
+.alert-container.fade-in {
     animation: fadeIn 0.5s ease-out forwards;
-  }
-  
+}
+
+.spinner {
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    border: 2px solid rgba(255, 255, 255, 0.3); /* Spinner background color */
+    border-radius: 50%;
+    border-top-color: white; /* Spinner color */
+    animation: spin 0.6s linear infinite;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.alert-container {
+    margin-right: 20vw;
+    margin-left: 20vw;
+    margin-top: 3vh;
+    opacity: 0; /* Default state */
+}
+
+.alert-container.fade-in {
+    animation: fadeIn 0.5s ease-out forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
