--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,7 +1,7 @@
 .header-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     border: 1px solid lightgray;
     height: 3rem;
     margin: 0 auto;
@@ -24,5 +24,11 @@
   .contact-btn {
     /* Adjust button styling as needed */
     border: 1px solid lightgray;
+  }
+
+  .assistant-name-container{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
   }
   
