--- a/src/Styles/Chat.css
+++ b/src/Styles/Chat.css
@@ -37,4 +37,67 @@
     align-items: center;
     gap: 1rem;
   }
+
+
+  .chat-box-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    height: 75vh;
+    overflow-y: auto;
+    /* background-color: #f9f9f9; */
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    margin-right: 4vw;
+    margin-left: 4vw;
+    margin-bottom: 1rem;
+    scoll-behavior: smooth;
+  }
+  
+  .chat-message {
+    max-width: 60%;
+    padding: 10px;
+    border-radius: 10px;
+    word-wrap: break-word;
+    text-align: left;
+  }
+  
+  .user-message {
+    align-self: flex-end;
+    background-color: black;
+    color: white;
+    border-radius: 10px 0 10px 10px;
+  }
+  
+  .bot-message {
+    align-self: flex-start;
+    background-color: #e5e5ea;
+    color: black;
+    border-radius: 0 10px 10px 10px;
+  }
+
+  .welcome-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  .welcome-message {
+    font-size: 2rem;
+    text-align: center;
+    /* margin-bottom: 1rem; */
+    opacity: 1;
+    transition: opacity 0.5s ease-out;
+  }
+  
+  .fade-out {
+    opacity: 0;
+  }
+
+
+  
+  
   
