--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -130,3 +130,22 @@ Modal styling starts here
     color: white !important; /* White font color */
   }
 
+  .workspaces-header-container{
+    display: flex;
+    justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    margin-bottom: 1vh;
+  }
+
+  .users-dropdown-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    left: 0;
+    align-items: flex-start;
+    justify-content: left;
+  }
+
