--- a/src/Styles/Chat.css
+++ b/src/Styles/Chat.css
@@ -180,11 +180,12 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    border-bottom: 1px solid #2c3038;
+    /* border-bottom: 1px solid #2c3038; */
   }
   
   .conversation-item:hover {
-    background-color: #2c3038;
+    background-color: white;
+    color: black;
     cursor: pointer;
   }
   
